--- a/theme/layouts/partials/head.html
+++ b/theme/layouts/partials/head.html
@@ -8,7 +8,7 @@
 {{- end }}
 
 {{- /* Title */}}
-<title>{{ if .IsHome }}{{ else }}{{ if .Title }}{{ .Title }} | {{ end }}{{ end }}{{ site.Title }}</title>
+<title>{{ if not .IsHome }}{{ if .Title }}{{ .Title }} | {{ end }}{{ end }}{{ site.Title }}</title>
 
 {{- /* Meta */}}
 {{- if .IsHome }}
@@ -203,7 +203,6 @@
     } else {
         document.querySelector("html").dataset.theme = 'light';
     }
-
 </script>
 {{- end }}
 
