--- a/theme/layouts/partials/templates/schema_json.html
+++ b/theme/layouts/partials/templates/schema_json.html
@@ -1,148 +1,146 @@
-{{ if .IsHome }}  {{/* Home (Main Page) */}}
-{{- $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
-{{- $pages = where $pages "Params.hiddenInHomeList" "!=" true }}
-{{- $paginator := .Paginate $pages }}
+{{ $webSiteId := printf "%s#website" site.Home.Permalink | safeHTML }}
+{{ $ownerId := printf "%s#owner" site.Home.Permalink | safeHTML }}
 
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "{{- ( site.Params.schema.siteType | default "WebSite") | title -}}",
-  "name": {{ site.Title }},
-  "url": {{ site.Home.Permalink | safeHTML }},
-  "description": {{ site.Params.description | plainify | truncate 180 | safeHTML }},
-  "image": {{ site.Params.assets.favicon | default "favicon.ico" | absURL }},
-  {{- if ge (len $pages) 1 }}
-  "blogPost": [
-    {{- range $index, $page := $paginator.Pages }}
-    {{ if $index }}, {{ end }}
+  "@graph": [
+    {{/* Website */}}
     {
+      "@type": "WebSite",
+      "@id": {{ $webSiteId }},
+      "name": {{ site.Title }},
+      "description": {{ site.Params.description | plainify | truncate 180 | safeHTML }},
+      "image": {{ site.Params.assets.favicon | default "favicon.ico" | absURL }},
+      "url": {{ site.Home.Permalink | safeHTML }},
+      "owner": { "@id": {{ $ownerId }} }
+    },
+
+    {{/* Website Owner */}}
+    {
+      "@type": "{{- ( site.Params.schema.siteOwner.type | default "Person") | title -}}",
+      "@id": {{ $ownerId }},
+      "name": {{ site.Params.schema.siteOwner.name | default site.Params.author | default site.Title }},
+      "url": {{ site.Params.schema.siteOwner.url | default site.Home.Permalink | safeHTML }},
+      "sameAs": [
+        {{ site.Home.Permalink | safeHTML }},
+        {{- if site.Params.schema.siteOwner.sameAs }}
+          {{ range $i, $e := site.Params.schema.siteOwner.sameAs }}{{ if $i }}, {{ end }}{{ trim $e " " }}{{ end }}
+        {{- else }}
+          {{ range $i, $e := site.Params.SocialIcons }}{{ if $i }}, {{ end }}{{ trim $e.url " " | safeURL }}{{ end }}
+        {{- end }}
+      ]
+    }
+
+    {{/* Additional - "Blog" on main page */}}
+    {{- if .IsHome }}
+    {{- $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
+    {{- $pages = where $pages "Params.hiddenInHomeList" "!=" true }}
+    {{- $paginator := .Paginate $pages }}
+
+    , {
+      "@type": "Blog",
+      "name": {{ site.Title }},
+      "description": {{ site.Params.description | plainify | truncate 180 | safeHTML }},
+      "url": {{ site.Home.Permalink | safeHTML }},
+      "isPartOf": { "@id": {{ $webSiteId }} }
+    }
+    {{- end }}
+
+    {{/* Additional - Breadcrumb list */}}
+    {{- if (or .IsPage .IsSection) }}
+    {{- $url := replace .Parent.Permalink (printf "%s" site.Home.Permalink) "" }}
+    {{- $lang_url := strings.TrimPrefix (printf "%s/" .Lang) $url }}
+    {{- $bc_list := (split $lang_url "/")}}
+    {{- $scratch := newScratch }}
+
+    , {
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {{- range $index, $element := $bc_list }}
+          {{- $scratch.Add "path" (printf "%s/" $element ) | safeJS }}
+          {{- $bc_pg := site.GetPage ($scratch.Get "path") -}}
+
+          {{- if (and ($bc_pg) (gt (len . ) 0)) }}
+            {{- if $index }}, {{- end }}
+            {
+              "@type": "ListItem",
+              "position": {{ add 1 $index }},
+              "name": {{ $bc_pg.Name }},
+              "item": {{ $bc_pg.Permalink | safeHTML }}
+            }
+          {{- end }}
+        {{- end }}
+
+        {{/* self-page addition */}}
+        {{- if (ge (len $bc_list) 2) }}, {{- end }}
+        {
+          "@type": "ListItem",
+          "position": {{ len $bc_list }},
+          "name": {{ .Name }},
+          "item": {{ .Permalink | safeHTML }}
+        }
+      ]
+    }
+    {{- end }}
+
+    {{/* Additional - "BlogPosting" for single post */}}
+    {{- if .IsPage }}
+    , {
       "@type": "BlogPosting",
-      "headline": {{ $page.Title | plainify }},
-      "name": "{{ $page.Title | plainify }}",
-      "description": {{ with $page.Description | plainify | truncate 100 }}{{ . }}{{ else }}{{ $page.Summary | plainify | truncate 100 }}{{ end -}},
+      "headline": {{ .Title | plainify }},
+      "name": "{{ .Title | plainify }}",
+      "description": {{ with .Description | plainify }}{{ . }}{{ else }}{{ .Summary | plainify }}{{ end -}},
+      "url": {{ .Permalink | safeHTML }},
+      "isPartOf": { "@id": {{ $webSiteId }} },
+      "keywords": [
+        {{- if .Params.keywords }}
+        {{ range $i, $e := .Params.keywords }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}
+        {{- else }}
+        {{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}
+        {{- end }}
+      ],
+      "articleBody": {{ .Content | safeJS | htmlUnescape | plainify }},
+      "wordCount" : "{{ .WordCount }}",
+      "inLanguage": {{ .Language.Lang | default site.LanguageCode }},
+      {{ if .Params.cover.image -}}
+      "image":
+        {{- if (ne .Params.cover.relative true) -}}
+        {{ .Params.cover.image | absURL }},
+        {{- else -}}
+        {{ (path.Join .RelPermalink .Params.cover.image ) | absURL }},
+        {{- end }}
+      {{- else }}
+        {{- $images := partial "templates/_funcs/get-page-images" . -}}
+        {{- with index $images 0 -}}
+      "image": {{ .Permalink | safeHTML }},
+        {{- end }}
+      {{- end -}}
       "datePublished": {{ .PublishDate }},
       "dateModified": {{ .Lastmod }},
-      "wordCount": "{{ $page.WordCount }}",
-      "url": {{ $page.Permalink | safeHTML }}
+      {{- with (.Params.author | default site.Params.author) }}
+      "author":
+        {{- if (or (eq (printf "%T" .) "[]string") (eq (printf "%T" .) "[]interface {}")) -}}
+          [{{- range $i, $v := . -}}
+          {{- if $i }}, {{end -}}
+          {
+            "@type": "Person",
+            "name": {{ $v }}
+          }
+          {{- end }}],
+          {{- else -}}
+          {
+            "@id": {{ $ownerId }}
+          },
+        {{- end -}}
+      {{- end }}
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": {{ .Permalink | safeHTML }}
+      },
+      "publisher": { "@id": {{ $webSiteId }} }
     }
     {{- end }}
-  ],
-  {{- end }}
-  "owner": {
-    "@type": "{{- ( site.Params.schema.siteOwner.type | default "Person") | title -}}",
-    "name": {{ site.Params.schema.siteOwner.name | default site.Params.author | default site.Title }},
-    "url": {{ site.Params.schema.siteOwner.url | default site.Home.Permalink | safeHTML }},
-    "sameAs": [
-      {{- if site.Params.schema.siteOwner.sameAs }}
-        {{ range $i, $e := site.Params.schema.siteOwner.sameAs }}{{ if $i }}, {{ end }}{{ trim $e " " }}{{ end }}
-      {{- else}}
-        {{ range $i, $e := site.Params.SocialIcons }}{{ if $i }}, {{ end }}{{ trim $e.url " " | safeURL }}{{ end }}
-      {{- end}}
-    ]
-  }
-}
-</script>
-{{- else if (or .IsPage .IsSection) }}  {{/* BreadcrumbList */}}
-{{- $url := replace .Parent.Permalink ( printf "%s" site.Home.Permalink) "" }}
-{{- $lang_url := strings.TrimPrefix ( printf "%s/" .Lang) $url }}
-{{- $bc_list := (split $lang_url "/")}}
-
-{{- $scratch := newScratch }}
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "BreadcrumbList",
-  "itemListElement": [
-  {{- range $index, $element := $bc_list }}
-
-    {{- $scratch.Add "path" (printf "%s/" $element ) | safeJS }}
-    {{- $bc_pg := site.GetPage ($scratch.Get "path") -}}
-
-    {{- if (and ($bc_pg) (gt (len . ) 0))}}
-    {{- if (and $index)}}, {{end }}
-    {
-      "@type": "ListItem",
-      "position": {{ add 1 $index  }},
-      "name": {{ $bc_pg.Name }},
-      "item": {{ $bc_pg.Permalink | safeHTML }}
-    }
-    {{- end }}
-
-  {{- end }}
-  {{- /*  self-page addition  */ -}}
-  {{- if (ge (len $bc_list) 2) }}, {{end }}
-    {
-      "@type": "ListItem",
-      "position": {{len $bc_list}},
-      "name": {{ .Name }},
-      "item": {{ .Permalink | safeHTML }}
-    }
   ]
 }
 </script>
-{{- if .IsPage }}  {{/* Single Page/Post/Article */}}
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "BlogPosting",
-  "headline": {{ .Title | plainify }},
-  "name": "{{ .Title | plainify }}",
-  "description": {{ with .Description | plainify }}{{ . }}{{ else }}{{ .Summary | plainify }}{{ end -}},
-  "url": {{ .Permalink | safeHTML }},
-  "keywords": [
-    {{- if .Params.keywords }}
-    {{ range $i, $e := .Params.keywords }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}
-    {{- else }}
-    {{ range $i, $e := .Params.tags }}{{ if $i }}, {{ end }}{{ $e }}{{ end }}
-    {{- end }}
-  ],
-  "articleBody": {{ .Content | safeJS | htmlUnescape | plainify }},
-  "wordCount" : "{{ .WordCount }}",
-  "inLanguage": {{ .Language.Lang | default "en-us" }},
-  {{ if .Params.cover.image -}}
-  "image":
-    {{- if (ne .Params.cover.relative true) -}}
-    {{ .Params.cover.image | absURL }},
-    {{- else -}}
-    {{ (path.Join .RelPermalink .Params.cover.image ) | absURL }},
-    {{- end}}
-  {{- else }}
-    {{- $images := partial "templates/_funcs/get-page-images" . -}}
-    {{- with index $images 0 -}}
-  "image": {{ .Permalink | safeHTML }},
-    {{- end }}
-  {{- end -}}
-  "datePublished": {{ .PublishDate }},
-  "dateModified": {{ .Lastmod }},
-  {{- with (.Params.author | default site.Params.author) }}
-  "author":
-    {{- if (or (eq (printf "%T" .) "[]string") (eq (printf "%T" .) "[]interface {}")) -}}
-    [{{- range $i, $v := . -}}
-    {{- if $i }}, {{end -}}
-    {
-      "@type": "Person",
-      "name": {{ $v }}
-    }
-    {{- end }}],
-      {{- else -}}
-    {
-      "@type": "Person",
-      "name": {{ . }}
-    },
-      {{- end -}}
-    {{- end }}
-  "mainEntityOfPage": {
-    "@type": "WebPage",
-    "@id": {{ .Permalink | safeHTML }}
-  },
-  "publisher": {
-    "@type": "{{- ( site.Params.schema.siteType | default "WebSite") | title -}}",
-    "name": {{ site.Title }},
-    "url": {{ site.Home.Permalink | safeHTML }},
-    "image": {{ site.Params.assets.favicon | default "favicon.ico" | absURL }}
-  }
-}
-</script>
-{{- end }}{{/* .IsPage end */}}
-
-{{- end -}}
